--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "babel-eslint": "7.2.3",
     "eslint": "^4.3.0",
+    "espree": "^3.5.2",
     "mocha": "3.4.1"
   },
   "peerDependencies": {
