--- a/package.json
+++ b/package.json
@@ -2,16 +2,14 @@
   "name": "react-native-animation-linter",
   "version": "0.0.0",
   "author": "askerry",
-  "description": "Lint rules to ensure safe management of React Native animations.",
+  "description":
+    "Lint rules to ensure safe management of React Native animations.",
   "main": "index.js",
   "scripts": {
     "test": "node_modules/mocha/bin/_mocha tests/**/*.js",
-    "format": "prettier-eslint --write 'tests/**/*.js, lib/**/*.js,'"
+    "format": "prettier-eslint --write './*.js' './tests/**/*.js' './lib/**/*.js'"
   },
-  "files": [
-    "LICENSE",
-    "README.md"
-  ],
+  "files": ["LICENSE", "README.md"],
   "repository": {
     "type": "git",
     "url": "https://github.com/khan/react-native-animation-linter"
