--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "eslint-plugin-react-native-animation-linter",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": "askerry",
-  "description":
-    "Lint rules to ensure safe management of React Native animations.",
+  "description": "Lint rules to ensure safe management of React Native animations.",
   "main": "index.js",
   "scripts": {
     "test": "node_modules/mocha/bin/_mocha tests/**/*.js",
     "format": "prettier-eslint --write './*.js' './tests/**/*.js' './lib/**/*.js'"
   },
-  "files": ["LICENSE", "README.md"],
+  "files": [
+    "LICENSE",
+    "README.md"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/khan/eslint-plugin-react-native-animation-linter"
