Add files to package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "files": [
     "LICENSE",
-    "README.md"
+    "README.md",
+    "index.js",
+    "lib"
   ],
   "repository": {
     "type": "git",
