Update libs to support eslint 5.x
Summary: A round of npm updates so that projects using ESLint 5 can use this ruleset

Test Plan:
1. Reference this npm module in a project
2. Change a component that uses animations so that it doesn't tear the animation down
3. Run eslint over the project
Verify that the rule triggers an error.

Reviewers: amy

Reviewed By: amy

Differential Revision: https://phabricator.khanacademy.org/D46645

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,13 @@
 {
-    "extends": [
-        "../khan-linter/eslintrc",
-    ],
-    "parserOptions": {
-        "ecmaVersion": 6,
-        "sourceType": "module",
-        "ecmaFeatures": {
-           "modules": true
-        }
-    },
-    "globals": {
-        "DEBUG": false
+  "extends": ["../devtools/khan-linter/eslintrc"],
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "modules": true
     }
+  },
+  "globals": {
+    "DEBUG": false
+  }
 }
