--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   "homepage": "https://github.com/khan/eslint-plugin-react-native-animation-linter",
   "bugs": "https://github.com/khan/eslint-plugin-react-native-animation-linter/issues",
   "devDependencies": {
-    "babel-eslint": "7.2.3",
-    "eslint": "^4.3.0",
-    "mocha": "3.4.1",
-    "prettier-eslint-cli": "^4.6.0"
+    "babel-eslint": "^8.2.6",
+    "eslint": "^5.1.0",
+    "mocha": "5.2.0",
+    "prettier-eslint-cli": "^4.7.1"
   },
   "peerDependencies": {
-    "eslint": "^3.17.0 || ^4.0.0"
+    "eslint": "^3.17.0 || ^4.0.0 || ^5.0.0"
   },
   "keywords": [
     "eslint-plugin",
